# mentor

./: .gitignore  Dockerfile  Mentor.py  README.md  __init__.py  bulk.py  curation_object.txt  example_init.py  log.json  main.py  notes.md  pyproject.toml  requirements.txt  setup.py
Mentor.egg-info/: PKG-INFO  SOURCES.txt
agentic/: .cache.db  .cache.db.REMOVED.git-id  .chat_cache.db  .chat_log.txt  .chat_log.txt.REMOVED.git-id  .curation.json  .log.json  Building_AI_Products.md  Marketing and Sales Professional Certificate.md  Sales Foundations Professional Certificate by NASP.md  Sales Management Professional Certificate by NASP.md  Sales Prof Cert.md  aliases.json  mentor_agent.py  mentor_chat.py  planning.json.json  readme.md  system_prompt.jinja  test_rich.txt  text.md  text_example.txt
editing_mode/: 1_review_chains.py  2_variables_to_bare_llm.py  3_reACT_prompting.py  4_reACT_prompting_with_caching.py  cached2.pkl  error.txt  notes.md
evaluation/: .cache.db  .log.json  blacklist.conf  data.py  evaluation.py  levenshtein.py  mentor_evaluation.json.REMOVED.git-id  mentor_evaluation_first.json  readme.md  score_curation.py  sequence.py  text_example.txt
evaluation/prompts/: audience_prompt.jinja  blacklist.txt  curriculum_review.jinja  learner_progression_prompt.jinja  query_prompt.jinja  sequence_prompt.jinja  title_prompt.jinja
mentor/: .cache.db  .log.json  .object_cache.cloudpickle  cache.db  mentor.py  text_example.txt
src/mentor/: __init__.py
src/mentor.egg-info/: PKG-INFO
src/mentor/agentic/: .curation.json  mentor_agent.py  mentor_chat.py
src/mentor/curator/: curate.py
src/mentor/editing_mode/: 2_variables_to_bare_llm.py  3_reACT_prompting.py  4_reACT_prompting_with_caching.py  ReACT Prompting.md  cached.pkl  metaprompt_query.md  prompt.jinja
src/mentor/evaluation/: data.py  evaluation.py  levenshtein.py  score_curation.py  sequence.py
src/mentor/evaluation/prompts/: learner_progression_prompt.jinja  title_prompt.jinja
src/mentor/mentor/: CurriculumModule.py  mentor.py
