[project]
name = "mentor"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.68.0",
    "conduit",
    "curator",
    "instructor>=1.11.3",
    "jinja2>=3.1.6",
    "kramer",
    "motor>=3.7.1",
    "openai>=1.108.1",
    "pandas>=2.3.2",
    "pillow>=11.3.0",
    "psycopg2-binary>=2.9.10",
    "pymongo>=4.15.1",
    "python-dotenv>=1.1.1",
    "rapidfuzz>=3.14.1",
    "rich>=14.1.0",
    "tinydb>=4.8.2",
]

[tool.uv.sources]
kramer = { path = "../kramer-project", editable = true }
conduit = { path = "../conduit-project", editable = true }
curator = { path = "../curator-project", editable = true }
